--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div>
                 <label for="course">Course:</label>
                 <select name="course" >
-                    <option value="C++">C++</option>
+                    <option value="Course">Course</option>
                     <option value="Java">Java</option>
                     <option value="HTML">HTML</option>
                     <option value="CSS">CSS</option>
@@ -98,6 +98,8 @@
             <div>
                 <label for="phone">Phone:</label><br>
                 <input type="text" id="phone" name="phone" placeholder="+91"><br>
+                <input type="text" id="phone" name="phone" placeholder="phone no"><br>
+
             </div>
             <br>
             
@@ -131,5 +133,3 @@
     </form>
 </body>
 </html>
-
-
