--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </script>
 </head>
 <body>
-    <form onsubmit="return validateForm()" action="index.html">
+    <form onsubmit="return validateForm()" action="in">
         <legend>
             <h1>Student Registration Form</h1>
         </legend>
@@ -152,3 +152,4 @@
     </form>
 </body>
 </html>
+
